Tue Nov 21 17:49:15 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Btree_close() -> Btree::commit() + delete B.

Tue Nov 21 17:19:38 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Modified QuartzPostList::delete_entry() so that it updates the
	  counts, even though it doesn't actually delete the entry yet.

Tue Nov 21 15:35:47 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Made the testsuite more colourful.

Tue Nov 21 15:16:00 GMT 2000 Olly Betts

	* OmEnquire::Internal now a public class so it can be a friend to
	  OmQuery (gcc 2.95.2 incorrectly accepts it when private).

Tue Nov 21 14:29:46 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed a rogue semi-colon introduced with the RTLD_DEFAULT fix.

Tue Nov 21 14:16:21 GMT 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Made the Btree opening functions member functions (as before,
	  the Btree_* functions remain as wrappers).  They are not
	  called from the constructor because they need to signal a
	  failure without throwing an exception.

	* The next() and prev() cursor functions were renamed to
	  next_default() and prev_default() due to a namespace collision.

Tue Nov 21 10:58:13 GMT 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implemented collection frequency stuff.  This involves:

	  - Added an OmDatabase::get_collection_freq() method.
	  - Added an OmPostListIterator::get_collection_freq() method.
	    (Also, added an OmPostListIterator::get_termfreq() method)
	  - Postlists and Databases have get_collection_freq() method.
	  - QuartzPostLists store the collection frequency at the beginning
	    of the list.
	  - Added tests to apitest and quartztest for reading collection
	    frequencies, both from a single database and from several
	    databases.

	  Collection frequencies will not work with SleepyCat, InMemory, or
	  Muscat 3.6 databases.

	* Also, make tests clear old databases at _start_ of their test run,